fix word wrap problem 🈴

--- a/src/components/SearchPage/SearchPage.css
+++ b/src/components/SearchPage/SearchPage.css
@@ -37,3 +37,8 @@
     height: 1px;
     border: 0;
 }
+
+.l-search_page__results {
+    display: flex;
+    flex-direction: column;
+}
