--- a/src/components/SearchPage/VideoRowCard/VideoRowCard.css
+++ b/src/components/SearchPage/VideoRowCard/VideoRowCard.css
@@ -30,17 +30,17 @@
 .l-video_row_card__info {
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
     margin-left: 20px;
 }
 
 .l-video_row_card__title {
     margin-bottom: 4px;
     font-weight: 500;
-    overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
     -webkit-line-clamp: 2; /* number of lines to show */
-    -webkit-box-orient: vertical;
+    -webkit-box-orient: horizontal;
 }
 
 .l-video_row_card__headline {
@@ -61,4 +61,19 @@
     font-size: 14px;
     color: var(--icon-color-primary);
     font-weight: 500;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2; /* number of lines to show */
+    -webkit-box-orient: horizontal;
+
+    /* to break long words */
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    -ms-word-break: break-all;
+    word-break: break-all;
+    word-break: break-word;
+    -ms-hyphens: auto;
+    -moz-hyphens: auto;
+    -webkit-hyphens: auto;
+    hyphens: auto;
 }
